--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.3",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "^7.8.5",
     "@react-navigation/drawer": "^7.7.3",
@@ -16,8 +17,14 @@
     "@react-navigation/stack": "^7.6.4",
     "babel-preset-expo": "~54.0.0",
     "expo": "~54.0.25",
+    "expo-font": "~14.0.9",
+    "expo-localization": "~17.0.7",
     "expo-status-bar": "~3.0.8",
+    "i18next": "^25.6.3",
+    "moment": "^2.30.1",
     "react": "19.1.0",
+    "react-hook-form": "^7.66.1",
+    "react-i18next": "^16.3.5",
     "react-native": "0.81.5",
     "react-native-edge-to-edge": "^1.7.0",
     "react-native-gesture-handler": "~2.28.0",
