--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-font": "~14.0.9",
     "expo-localization": "~17.0.7",
     "expo-status-bar": "~3.0.8",
+    "expo-updates": "~29.0.12",
     "i18next": "^25.6.3",
     "moment": "^2.30.1",
     "react": "19.1.0",
@@ -28,12 +29,14 @@
     "react-native": "0.81.5",
     "react-native-edge-to-edge": "^1.7.0",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-nitro-modules": "^0.31.8",
+    "react-native-mmkv": "^4.0.1",
+    "react-native-nitro-modules": "^0.31.9",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-unistyles": "^3.0.18",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
