--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.66.1",
     "react-i18next": "^16.3.5",
     "react-native": "0.81.5",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-edge-to-edge": "^1.7.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-mmkv": "^4.0.1",
@@ -34,6 +35,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-unistyles": "^3.0.18",
     "react-native-worklets": "0.5.1",
     "zustand": "^5.0.8"
