--- a/ios/HisaabBee/Info.plist
+++ b/ios/HisaabBee/Info.plist
@@ -17,6 +17,7 @@
     <key>CFBundleLocalizations</key>
     <array>
       <string>en</string>
+      <string>ar</string>
     </array>
     <key>CFBundleName</key>
     <string>$(PRODUCT_NAME)</string>
@@ -50,6 +51,29 @@
     </dict>
     <key>RCTNewArchEnabled</key>
     <true/>
+    <key>UIAppFonts</key>
+    <array>
+      <string>Nunito-Black.ttf</string>
+      <string>Nunito-BlackItalic.ttf</string>
+      <string>Nunito-Bold.ttf</string>
+      <string>Nunito-BoldItalic.ttf</string>
+      <string>Nunito-ExtraBold.ttf</string>
+      <string>Nunito-ExtraBoldItalic.ttf</string>
+      <string>Nunito-ExtraLight.ttf</string>
+      <string>Nunito-ExtraLightItalic.ttf</string>
+      <string>Nunito-Italic.ttf</string>
+      <string>Nunito-Light.ttf</string>
+      <string>Nunito-LightItalic.ttf</string>
+      <string>Nunito-Medium.ttf</string>
+      <string>Nunito-MediumItalic.ttf</string>
+      <string>Nunito-Regular.ttf</string>
+      <string>Nunito-SemiBold.ttf</string>
+      <string>Nunito-SemiBoldItalic.ttf</string>
+      <string>NotoNaskhArabic-Bold.ttf</string>
+      <string>NotoNaskhArabic-Medium.ttf</string>
+      <string>NotoNaskhArabic-Regular.ttf</string>
+      <string>NotoNaskhArabic-SemiBold.ttf</string>
+    </array>
     <key>UILaunchStoryboardName</key>
     <string>SplashScreen</string>
     <key>UIRequiredDeviceCapabilities</key>
