--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -98,6 +98,7 @@ android {
         buildConfigField "String", "REACT_NATIVE_RELEASE_LEVEL", "\"${findProperty('reactNativeReleaseLevel') ?: 'stable'}\""
         resourceConfigurations += ["en"]
         resourceConfigurations += ["en", "ar"]
+        resourceConfigurations += ["en", "ar"]
     }
     signingConfigs {
         debug {
