--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-expo": "~54.0.0",
     "expo": "~54.0.25",
     "expo-font": "~14.0.9",
+    "expo-linear-gradient": "~15.0.7",
     "expo-localization": "~17.0.7",
     "expo-status-bar": "~3.0.8",
     "expo-updates": "~29.0.12",
@@ -27,9 +28,9 @@
     "react-hook-form": "^7.66.1",
     "react-i18next": "^16.3.5",
     "react-native": "0.81.5",
-    "react-native-chart-kit": "^6.12.0",
     "react-native-edge-to-edge": "^1.7.0",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-gifted-charts": "^1.4.67",
     "react-native-mmkv": "^4.0.1",
     "react-native-nitro-modules": "^0.31.9",
     "react-native-reanimated": "~4.1.1",
