added toast, alerts and category screens

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -99,6 +99,7 @@ android {
         resourceConfigurations += ["en"]
         resourceConfigurations += ["en", "ar"]
         resourceConfigurations += ["en", "ar"]
+        resourceConfigurations += ["en", "ar"]
     }
     signingConfigs {
         debug {
