--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.66.1",
     "react-i18next": "^16.3.5",
     "react-native": "0.81.5",
+    "react-native-calendars": "^1.1313.0",
     "react-native-edge-to-edge": "^1.7.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-gifted-charts": "^1.4.67",
