--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-i18next": "^16.3.5",
     "react-native": "0.81.5",
     "react-native-calendars": "^1.1313.0",
+    "react-native-confirmation-code-field": "^8.0.1",
     "react-native-edge-to-edge": "^1.7.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-gifted-charts": "^1.4.67",
