--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -100,6 +100,9 @@ android {
         resourceConfigurations += ["en", "ar"]
         resourceConfigurations += ["en", "ar"]
         resourceConfigurations += ["en", "ar"]
+        resourceConfigurations += ["en", "ar"]
+        resourceConfigurations += ["en", "ar"]
+        resourceConfigurations += ["en", "ar"]
     }
     signingConfigs {
         debug {
