--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "react-native-gifted-charts": "^1.4.67",
     "react-native-mmkv": "^4.0.1",
     "react-native-nitro-modules": "^0.31.9",
+    "react-native-pager-view": "6.9.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
+    "react-native-tab-view": "^4.2.2",
     "react-native-toast-message": "^2.3.3",
     "react-native-unistyles": "^3.0.18",
     "react-native-worklets": "0.5.1",
