--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@hookform/resolvers": "^5.2.2",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "^7.8.5",
     "@react-navigation/drawer": "^7.7.3",
@@ -45,6 +46,7 @@
     "react-native-toast-message": "^2.3.3",
     "react-native-unistyles": "^3.0.18",
     "react-native-worklets": "0.5.1",
+    "zod": "^4.3.5",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
