--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-edge-to-edge": "^1.7.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-gifted-charts": "^1.4.67",
+    "react-native-keyboard-controller": "1.18.5",
     "react-native-mmkv": "^4.0.1",
     "react-native-nitro-modules": "^0.31.9",
     "react-native-pager-view": "6.9.1",
