--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-navigation/drawer": "^7.7.3",
     "@react-navigation/native": "^7.1.20",
     "@react-navigation/stack": "^7.6.4",
+    "@supabase/supabase-js": "^2.90.1",
+    "@tanstack/react-query": "^5.90.19",
     "babel-preset-expo": "~54.0.0",
     "expo": "~54.0.25",
     "expo-font": "~14.0.9",
@@ -46,6 +48,7 @@
     "react-native-tab-view": "^4.2.2",
     "react-native-toast-message": "^2.3.3",
     "react-native-unistyles": "^3.0.18",
+    "react-native-url-polyfill": "^3.0.0",
     "react-native-worklets": "0.5.1",
     "zod": "^4.3.5",
     "zustand": "^5.0.8"
