feat: Implement Supabase authentication for user login, registration, and logout, including deep linking for email verification.

--- a/ios/HisaabBee/Info.plist
+++ b/ios/HisaabBee/Info.plist
@@ -32,6 +32,7 @@
       <dict>
         <key>CFBundleURLSchemes</key>
         <array>
+          <string>hisaabBee</string>
           <string>com.anonymous.HisaabBee</string>
         </array>
       </dict>
