--- a/ios/HisaabBee/Info.plist
+++ b/ios/HisaabBee/Info.plist
@@ -32,7 +32,7 @@
       <dict>
         <key>CFBundleURLSchemes</key>
         <array>
-          <string>hisaabBee</string>
+          <string>hisaabbee</string>
           <string>com.anonymous.HisaabBee</string>
         </array>
       </dict>
@@ -50,6 +50,12 @@
       <key>NSAllowsLocalNetworking</key>
       <true/>
     </dict>
+    <key>NSCameraUsageDescription</key>
+    <string>Allow $(PRODUCT_NAME) to access your camera</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>Allow $(PRODUCT_NAME) to access your microphone</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>The app accesses your photos to let you share them with your friends.</string>
     <key>RCTNewArchEnabled</key>
     <true/>
     <key>UIAppFonts</key>
