--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@supabase/supabase-js": "^2.90.1",
     "@tanstack/react-query": "^5.90.19",
     "babel-preset-expo": "~54.0.0",
+    "base64-arraybuffer": "^1.0.2",
     "expo": "~54.0.25",
     "expo-font": "~14.0.9",
+    "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "~15.0.7",
     "expo-localization": "~17.0.7",
     "expo-status-bar": "~3.0.8",
