watermelon db integrated with category syncing

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -99,6 +99,9 @@ android {
         resourceConfigurations += ["en", "ar"]
         resourceConfigurations += ["en", "ar"]
         resourceConfigurations += ["en", "ar"]
+        resourceConfigurations += ["en", "ar"]
+        resourceConfigurations += ["en", "ar"]
+        resourceConfigurations += ["en", "ar"]
     }
     signingConfigs {
         debug {
