--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@hookform/resolvers": "^5.2.2",
+    "@nozbe/watermelondb": "^0.28.0",
+    "@react-native-community/netinfo": "11.4.1",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "^7.8.5",
     "@react-navigation/drawer": "^7.7.3",
@@ -20,6 +22,7 @@
     "@tanstack/react-query": "^5.90.19",
     "babel-preset-expo": "~54.0.0",
     "expo": "~54.0.25",
+    "expo-build-properties": "~1.0.10",
     "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.9",
     "expo-image-picker": "~17.0.10",
@@ -56,6 +59,7 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.28.6",
     "@types/react": "~19.1.0",
     "typescript": "~5.9.2"
   },
