--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@hookform/resolvers": "^5.2.2",
+    "@legendapp/list": "^2.0.19",
     "@nozbe/watermelondb": "^0.28.0",
     "@react-native-community/netinfo": "11.4.1",
     "@react-native-masked-view/masked-view": "0.3.2",
@@ -18,6 +19,7 @@
     "@react-navigation/drawer": "^7.7.3",
     "@react-navigation/native": "^7.1.20",
     "@react-navigation/stack": "^7.6.4",
+    "@shopify/flash-list": "2.0.2",
     "@supabase/supabase-js": "^2.90.1",
     "@tanstack/react-query": "^5.90.19",
     "babel-preset-expo": "~54.0.0",
