--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@supabase/supabase-js": "^2.90.1",
     "@tanstack/react-query": "^5.90.19",
     "babel-preset-expo": "~54.0.0",
+    "dayjs": "^1.11.19",
     "expo": "~54.0.25",
     "expo-build-properties": "~1.0.10",
     "expo-file-system": "~19.0.21",
@@ -33,7 +34,6 @@
     "expo-status-bar": "~3.0.8",
     "expo-updates": "~29.0.12",
     "i18next": "^25.6.3",
-    "moment": "^2.30.1",
     "react": "19.1.0",
     "react-hook-form": "^7.66.1",
     "react-i18next": "^16.3.5",
