refactor: removed tag zustand store and  migrate tag operations to use `tagService` with WatermelonDB observables.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "cSpell.words": [
         "supabase",
         "supabse",
-        "Syncable"
+        "Syncable",
+        "Unistyles"
     ]
 }
